--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
         color: rgb(8, 4, 4);
         font-weight: bold;
         margin-top: 30px;
-        font-size: large;
+        font-size: medium;
     }
     #signup
     {
@@ -99,7 +99,7 @@
         box-shadow: 0px 0px 6px #4c92e8; 
     }
     .label {
-        padding-left: 55px;
+        padding-left: 65px;
     }
 
     </style>
